# rs-http-server

./: Cargo.toml  Notes.md  README.md
src/: main.rs
src/http/: accept_encoding.rs  content_type.rs  encoding.rs  header.rs  method.rs  mod.rs  request.rs  response.rs  server.rs  status_code.rs
src/utils/: setup.rs
