[package]
name = "codecrafters-http-server"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.68"                                # error handling
bytes = "1.3.0"                                  # helps manage buffers
thiserror = "1.0.38"                             # error handling
anyhow = "1.0.59"                                   # error handling
bytes = "1.3.0"                                     # helps manage buffers
thiserror = "1.0.38"                                # error handling
tokio = { version = "1.23.0", features = ["full"] } # async networking
nom = "7.1.3"                                       # parser combinators
itertools = "0.11.0"                                # General iterator helpers
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
color-eyre = "0.6.3"
regex = "1.10.4"
flate2 = "1.0.30"

[dev-dependencies]
pretty_assertions = "1.3.0"      